--- a/SST_HTML/Assi2.css
+++ b/SST_HTML/Assi2.css
@@ -1,13 +1,49 @@
 header{
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     display: block;
-    text-align: center;
+    
     
 }
+nav{
+    display: flex;
+    gap: 20px;
+    padding-top: 10px;
+    float: right;
+    margin-right: 80px;
+}
+.menu-item{
+    display: block;
+    background-color: gold;
+    border-radius: 6px;
+}
+.menu-item a{
+    color: white;
+    text-decoration: none;
+    padding: 10px 16px;
+    display: block;
+}
 footer{
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     color: white;
 }
 div{
-    min-height: 350;
+    min-height:30px;
+}
+table{
+    background-color:rgb(221, 255, 0);
+    border-radius: 10px;
+    height: 20%;
+    width: 30%;
+    text-align: center;
+    margin-left: 50%;
+    margin-top: 10%;
+}
+button{
+    border-radius: 25px;
+    background-color: green;
+    height: 50%;
+    width: 25%;
+}
+body{
+    background-color: rgb(16, 222, 226);
 }
